# private_dumb_money

docs/superpowers/plans/: 2026-05-26-clean-wallet-mvp.md
docs/superpowers/specs/: 2026-05-26-clean-wallet-mvp-design.md
drop_process/: a1-api-vectors.md  a1-enclave-state-changes.md  a1-interface.md
drop_process/a1-interface/: 00-overview.md  01-wire-format.md  02-engine-and-scanner.md  03-state-security.md  04-api-service-vector.md  05-operations.md  06-next-gaps.md
drop_process/a1-interface/lanes/: lane-a2-enclave.md  lane-b-buyer-app.md  lane-c-creator-content.md  lane-d-storage-bucket.md
week1/: ZCash Cheat Sheet (KR).md  ZCash Cheat Sheet.md  Zcash Developer Cheat Sheet (KR).md  Zcash Developer Cheat Sheet.md
week2/: 260502.md  project-references-by-idea.md  projects.md  section-a-zcash-projects-shallow-summary.md  section-b-zcash-projects-shallow-summary.md  section-c-zcash-projects-shallow-summary.md  section-d-zcash-projects-shallow-summary.md
week3/: project-scope.md  research-execution-plan-pay-anyone-legend.md  research-plan-pay-anyone-legend.md  회의록_week3.md
week3/pay-anyone-legend/: 01-intent-parser.md  02-service-registry.md  03-z-address-generation.md  04-deposit-tracking.md  05-one-click-bridge.md  06-near-chain-signatures.md  07-x402-client.md  08-near-rust-contract.md  CONCRETE-EXAMPLE-WALKTHROUGH.md  README.md  TEAM-WALKTHROUGH.md  _claims-to-verify.md  category-E-extraction.md  zcash-tool-inventory.md
week3/pay-anyone-legend/subsystems/: 02-service-registry.md  05-one-click-bridge.md  07-x402-client.md
week3/sipher-and-sip-protocol/: README.ko.md  README.md  research-plan.md  sipher-and-sip-protocol-big-picture.excalidraw
week3/zchat/: 0.README.md  1._claims-to-verify.md  2.category-A-extraction.md  3.zcash-tool-inventory.md  corrections-log.md  module-attribution.md  sequence-diagrams.md
week3/zchat/subsystems/: 01-zmsg-protocol.md  02-kex-e2e-encryption.md  03-double-ratchet.md  04-group-messaging.md  05-zip321-tx-chunking.md  06-send-receive-flow.md  07-contact-book-address-cache.md  08-nostr-side-channel.md
week4/: project-scope.md  spec.md
week4/clean-wallet/: README.kr.md  README.md  idea.md  technical-explanation.md
week4/drop/: one-pager.md  project-scope.md  spec.md
week4/latch/: the-full-picture-en.md  the-full-picture-kr.md
week4/proof/: flow.md  proof.md
week5/: clean-wallet-limitations.md
week5/clean-wallet-mvp/: .gitignore  README.md  pnpm-lock.yaml
week5/clean-wallet-mvp/apps/scanner/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.test.yml  docker-compose.yml
week5/clean-wallet-mvp/apps/scanner/src/: artifact.rs  attest.rs  lib.rs  lightwalletd.rs  main.rs  policy.rs  scan.rs  server.rs
week5/clean-wallet-mvp/apps/scanner/tests/: regtest_scan.rs  regtest_setup.sh
week5/clean-wallet-mvp/demo-data/: README.md  policy.demo.json  sanctioned-set.json  ufvk-clean.txt  ufvk-dirty.txt
week5/clean-wallet-mvp/docs/: demo-script.md  status-kr.md  task-15-runbook.md
week5/clean-wallet-mvp/scripts/: deploy-cvm.sh  fund-demo-wallets.sh  gen-vectors.ts  tsconfig.json
week5/clean-wallet-mvp2/: .gitignore  Dockerfile  README.md  docker-compose.phala.yml
week5/clean-wallet-mvp2/clean_wallet/: __init__.py  attestation.py  blacklist.py  cli.py  client_encrypt.py  crypto.py  enclave_key.py  lightwalletd.py  proof.py  scanner.py  service.py
week5/clean-wallet-mvp2/docs/: ARCHITECTURE.md  SECURITY_PRIVACY.md  USER_GUIDE.md
week5/clean-wallet-mvp2/fixtures/: blacklist_commitments.txt  error_scan.json  fail_scan.json  pass_scan.json
week5/clean-wallet-mvp2/omx_wiki/: 2026-06-03-phala-chainmetadata-fix-for-mainnet-ufvk-scan.md  architecture-current-and-target.md  encrypted-viewing-capability-contract.md  index.md  log.md  phala-dstack-attestation.md  phala-enclave-ivk-next-step-handoff.md  phala-live-poc-deployment-followup.md  phala-runtime-enclave-key-deployment-2026-06-03.md  real-zcash-lightwallet-ivk-poc-2026-06-02.md  real-zcash-lightwallet-ivk-uivk-enclave-poc-status-2026-06-02.md  session-log-2026-05-31-phala-tee-scaffold.md  zcash-viewing-key-scanner-boundary.md
week5/clean-wallet-mvp2/scripts/: demo-error.sh  demo-fail.sh  demo-pass.sh  encrypt_viewing_capability.py  getArtifact.py  verify-report.sh
week5/clean-wallet-mvp2/zcash_scanner/: Cargo.toml
week5/clean-wallet-mvp2/zcash_scanner/src/: main.rs
week5/clean-wallet-mvp3/: .dockerignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
week6/clean-wallet/: .dockerignore  .gitignore  ONBOARDING.md  README.kr.md  README.md  amplify.yml  docker-compose.dstack.yml  docker-compose.local-tee.yml  docker-compose.yml  package-lock.json  package.json  real-test-fail.json  real-test-pass.json  test-mainnet_wallet.txt  tsconfig.base.json
week6/clean-wallet/apps/zcash-scanner-rs/: Cargo.toml  build.rs
week6/clean-wallet/apps/zcash-scanner-rs/src/: lib.rs  main.rs
week6/clean-wallet/apps/zcash-scanner-rs/tests/: completeness.rs  encoding.rs  pow.rs  transparent_tracker.rs
week7/drop/: .env.example  .gitignore  README.md  a1-provided-support.md  feasibility-review.md  lane-b-a1-a2-gap-review.md  plan-a1-payment-flow.md  plan-a1a-chain-query.md  plan-a2-enclave-platform.md  spec.md  spikes.md  task-division.md
week7/drop/indexer/: Cargo.toml  DEPLOY.md  Dockerfile  build.rs  docker-compose.yml
week7/drop/indexer/proto/: compact_formats.proto
week7/drop/indexer/src/: api.rs  attest.rs  bucket.rs  catalog.rs  detect.rs  dispatch.rs  dstack.rs  engine.rs  lib.rs  lightwalletd.rs  main.rs  memo.rs  provision.rs  scan_loop.rs  server.rs  state.rs  zecscope_adapter.rs
week7/drop/indexer/tests/: live_chain_memo.rs  live_provisioned_scan.rs
(+165 files in other folders)
