[package]
name = "clean-wallet-zcash-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
anyhow = "1"
hex = "0.4"
incrementalmerkletree = "0.8.2"
orchard = "0.13.1"
sapling = { package = "sapling-crypto", version = "0.7.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zcash_client_backend = { version = "0.22.0", features = ["orchard"] }
zcash_keys = { version = "0.13.0", features = ["orchard", "sapling"] }
zcash_protocol = "0.8.0"
zip32 = "0.2"
