[package]
name = "drop-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
dryoc = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
zeroize = "1"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
