[package]
name = "clean-wallet-scanner"
version = "0.1.0"
edition.workspace = true

[lib]
name = "clean_wallet_scanner"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
hex = "0.4"
orchard = "0.13"
sapling-crypto = { version = "0.7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-webpki-roots"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.12"
zcash_address = "0.11"
zcash_note_encryption = "0.4"
zip32 = "0.2"
zcash_client_backend = { version = "0.22", default-features = false, features = ["orchard"] }
zcash_keys = { version = "0.13", default-features = false, features = ["sapling", "orchard", "transparent-inputs"] }
zcash_primitives = "0.27"
zcash_protocol = "0.8"
zcash_transparent = "0.7"
bip0039 = "0.12"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.4"
