[package]
name = "zcash-scanner-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bip39 = "2.1"
equihash = "0.3.0"
hex = "0.4.3"
orchard = "0.13.1"
prost = "0.14.3"
rand = "0.9"
zip32 = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tonic = { version = "0.14.6", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.6"
zcash_client_backend = { version = "0.22.0", features = ["orchard"] }
zcash_keys = { version = "0.13.0", features = ["transparent-inputs", "sapling", "orchard"] }
zcash_primitives = "0.27.1"
zcash_protocol = "0.8.0"
zcash_transparent = { version = "0.7.0", features = ["transparent-inputs"] }
zeroize = "1.8.1"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"
